baml_language/crates/baml_tests/snapshots/engine/baml_tests__engine__tests__narrowed_function_value_preserves_source_defaults_bytecode.snap
---
source: crates/baml_tests/src/engine.rs
---
function combine(x: int, a: int, b: int) -> int {
    load_var a
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var a

  L0:
    load_var b
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const 100
    store_var b

  L1:
    load_var2 1 2
    add_int
    load_var b
    add_int
    return
}

function main() -> int {
    load_const 1
    load_const 5
    call user.combine
    return
}
