baml_language/crates/baml_tests/snapshots/engine/baml_tests__engine__tests__source_call_omitted_default_executes_in_callee_scope_bytecode.snap
---
source: crates/baml_tests/src/engine.rs
---
function add(base: int, amount: int) -> int {
    load_var amount
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    add_int_var_const_store 1 1 2

  L0:
    add_int_var_var 1 2
    return
}

function main() -> int {
    load_const 5
    load_const <omitted>
    call user.add
    return
}
